# sports-rules-mcp

./: LICENSE  README.md  http_server.py  pyproject.toml  render.yaml  server.py
sports_rules_mcp/: __main__.py  server.py
